# Multi-City-Event-Booking

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Flow5_Planning_refractor.md  Flow5_Testing_errorFixes.md  PRODUCT.md  Presentation.md  SPEC_1.md  docker-compose.yml  pom.xml
admin/: pom.xml
agents/: CODING_AGENT.md  SPEC_GENERATOR.md  TEST_AGENT.md
app/: pom.xml
booking-inventory/: pom.xml
discovery-catalog/: pom.xml
docker/: init.sql
docs/: DOCKER_CHANGES.md  DOCKER_GUIDE.md  EVENTBRITE_INTEGRATION.md  Notes.txt  (+4 more)
mock-eventbrite-api/: .env.example  Dockerfile  README.md  pyproject.toml
mock-eventbrite-api/app/: config.py  database.py  main.py
mock-eventbrite-api/app/api/: db.py  dependencies.py
mock-eventbrite-api/app/api/routes/: attendees.py  capacity.py  discounts.py  events.py  mock_admin.py  orders.py  schedules.py  seatmaps.py  ticket_classes.py  venues.py
mock-eventbrite-api/app/exception/: exception_handlers.py  exceptions.py
mock-eventbrite-api/app/models/: __init__.py  attendee.py  capacity_tier.py  discount.py  event.py  order.py  organization.py  seatmap.py  ticket_class.py  venue.py  webhook_log.py
mock-eventbrite-api/app/schemas/: attendee.py  capacity.py  common.py  discount.py  event.py  order.py  schedule.py  seatmap.py  ticket_class.py  venue.py
mock-eventbrite-api/app/services/: pagination.py  rate_limiter.py  seed.py  webhook_dispatcher.py
mock-eventbrite-api/app/utils/: rate_limit_middleware.py
mock-eventbrite-api/tests/: conftest.py  test_auth.py  test_events.py  test_mock_admin.py  test_orders_attendees.py
(+764 files in other folders)
